# zkcap

./: .gitignore  CODEBASE_STATUS.md  DEPLOYMENT_CHECKLIST.md  README.md  package-lock.json  package.json
backend/: .env.example  alembic.ini  main.py  package-lock.json  package.json  requirements.txt  tsconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 002_tee_solana_zktls.py
backend/app/api/: api.py
backend/app/core/: config.py
backend/app/database/: base.py
backend/app/integrations/: solana_program.py  tee_worker.py
backend/app/models/: attestation.py  commit.py  project.py
backend/app/schemas/: attestation.py  commit.py  project.py  webhook.py
backend/app/services/: attestation_service.py  commit_service.py  project_service.py  zktls_service.py
backend/prisma/: schema.prisma
backend/src/: index.ts
backend/src/core/: auth.ts  config.ts
backend/src/integrations/: midnight.ts  tee.ts
docs/: api.md  architecture.md  read.md  roadmap.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.mjs
frontend/app/: globals.css  layout.js  page.js  page.js.save
frontend/components/: Navbar.js
frontend/lib/: api.js
scripts/: setup.sh
worker/blockchain/: Anchor.toml  Cargo.toml  __init__.py
worker/blockchain/programs/zkcap_attestation/: Cargo.toml
worker/blockchain/programs/zkcap_attestation/src/: lib.rs
worker/evaluation/: __init__.py  package-lock.json  package.json  tsconfig.json
worker/midnight/: package-lock.json  package.json  test_ws.js
worker/zk-tls/: .gitkeep  __init__.py
(+33 files in other folders)
